--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=Activities.db;Integrated Security=True;encrypt=false"
-  }
+  },
+  "TokenKey": "super secret key"
 }
